--- a/src/_data/navigation.yaml
+++ b/src/_data/navigation.yaml
@@ -1,4 +1,3 @@
----
 items:
   - text: Menu One
     url: "#"
@@ -6,5 +5,5 @@ items:
     url: "#"
   - text: Menu Three
     url: "#"
-  - text: Blog
-    url: "/blog"
+  - text: Blog2
+    url: /blog2
